feat: 상품조회시 카테고리 목록 응답 추가